<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/successTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:paddingTop="3dp"
            android:text="@string/agent_type"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/successSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="30dp"
            android:text="@string/agent_sub_title"
            android:textSize="22sp" />

        <Button
            android:id="@+id/constituency_agent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:background="@drawable/btn_bac"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/constituency_agent"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <Button
            android:id="@+id/poll_station_agent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:background="@drawable/btn_bac"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/poll_station_agent"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/agent_jojo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:background="@drawable/btn_bac"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/free_agent"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>


</RelativeLayout>