<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/candidates_view"
        android:gravity="center"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <android.support.design.widget.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/raila_total"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/raila_total"
                android:inputType="number"
                android:maxLength="10" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/uhuru_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/hint_uhuru_total"
                android:inputType="number"
                android:maxLength="10" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/spoilt_votes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/hint_spoilt"
                android:inputType="number"
                android:maxLength="10" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/total_votes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/hint_total"
                android:inputType="number"
                android:maxLength="10" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</ScrollView>