<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/image_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:padding="8dp"
                android:textAllCaps="true"
                android:visibility="gone" />


            <TextView
                android:id="@+id/page_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/locations_data"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp" />


            <TextView
                android:visibility="gone"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="County" />

            <Spinner
                android:visibility="gone"
                android:padding="8dp"
                android:id="@+id/county_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/counties" />

            <TextView
                android:visibility="gone"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/constituency" />

            <Spinner
                android:padding="8dp"
                android:id="@+id/constituency_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />


            <Spinner

                android:padding="8dp"
                android:id="@+id/ward_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />


            <TextView
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/polling_center" />


            <Spinner
                android:padding="8dp"
                android:id="@+id/poll_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <TextView
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/polling_stream" />


            <Spinner
                android:padding="8dp"
                android:id="@+id/stream_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/voter_turnout_total"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:hint="@string/hint_total"
                    android:inputType="number"
                    android:maxLength="10" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/imageview_container"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_camera"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />


            <Button
                android:id="@+id/submit_button"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:background="@drawable/btn_bac"
                android:clickable="true"
                android:text="@string/submit"
                android:textColor="#fff"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
