<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.pathways_international.ts.ui.fragment.MainFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/image_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:padding="8dp"
                android:textAllCaps="true"
                android:visibility="gone" />


            <TextView
                android:id="@+id/page_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/hint_tallying_center"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />


            <TextView
                android:visibility="gone"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/county" />

            <Spinner
                android:visibility="gone"
                android:padding="8dp"
                android:id="@+id/county_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/counties" />

            <TextView
                android:visibility="gone"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/constituency" />

            <Spinner
                android:padding="8dp"
                android:id="@+id/constituency_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:visibility="gone"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ward" />

            <Spinner
                android:padding="8dp"
                android:id="@+id/ward_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />


            <TextView
                android:id="@+id/county_name"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/county" />


            <TextView
                android:textColor="@color/colorPrimary"
                android:id="@+id/constituency_name"
                android:padding="8dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/constituency" />


            <ImageView
                android:id="@+id/imageview_container"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_camera"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <include layout="@layout/result_fields" />


            <Button
                android:id="@+id/submit_button"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:background="@drawable/btn_bac"
                android:clickable="true"
                android:text="@string/submit"
                android:textColor="#fff"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

