<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/no_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="50dp"
        android:text="No permission granted."
        android:textSize="20sp"
        android:visibility="gone"
        android:textColor="@color/white"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_verification"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/white"
            android:text="@string/hint_verification_message"
            android:textSize="20dp"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/verification_key"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_verification_key"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <Button
            android:id="@+id/done"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#ea4c88"
            android:text="DONE"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white" />

        <ProgressBar
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/progress"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:indeterminate="false"
            android:max="100"
            android:progress="40"
            android:progressBackgroundTint="#ea4c88"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>